# ConferenceBot

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  config.json  vcpkg.json
include/ConferenceBot/BotServer/: BotServer.hpp  ConferenceBotController.hpp  DbClientFactory.hpp
include/ConferenceBot/Config/: Config.hpp  ConfigProvider.hpp
include/ConferenceBot/Controllers/: ExportController.hpp
include/ConferenceBot/Events/: CallbackQueryRouter.hpp  CommandRegistry.hpp  MessageHandler.hpp
include/ConferenceBot/Keyboards/: Keyboards.hpp
include/ConferenceBot/Net/: BotApiExecutor.hpp  DrogonHttpClient.hpp
include/ConferenceBot/Resources/: Assets.hpp  Callbacks.hpp  Commands.hpp  Constants.hpp  Strings.hpp
include/ConferenceBot/Services/: RegistrationRepository.hpp  RegistrationState.hpp
include/ConferenceBot/Workflows/: CheckSubscriptionWorkflow.hpp  RegistrationWorkflow.hpp  StartWorkflow.hpp
models/: Registrations.cc  Registrations.h  model.json
resources/db/: init.sql
src/: main.cpp
src/BotServer/: BotServer.cpp  ConferenceBotController.cpp  DbClientFactory.cpp
src/Config/: ConfigProvider.cpp
src/Controllers/: ExportController.cpp
src/Events/: CallbackQueryRouter.cpp  CommandRegistry.cpp  MessageHandler.cpp
src/Net/: BotApiExecutor.cpp  DrogonHttpClient.cpp
src/Services/: RegistrationRepository.cpp  RegistrationState.cpp
src/Workflows/: CheckSubscriptionWorkflow.cpp  RegistrationWorkflow.cpp  StartWorkflow.cpp
